[project]
name = "med-traker"
version = "0.1.0"
description = "a pet project"
authors = [
    {name = "Alina Tishchenko",email = "alinaesenina4545@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
