[project]
name = "stepic-cource"
version = "0.1.0"
description = "a test cource"
authors = [
    {name = "Alina Tishchenko",email = "alinaesenina4545@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[TOOLS]
pylint:
  disable= no-self-argument, E0213, unsubscriptable-object, E1136